--- a/css/style.css
+++ b/css/style.css
@@ -3,36 +3,75 @@
      -moz-box-sizing: border-box;
           box-sizing: border-box;
 }
+body {
+  font-family: "Arial";	
+  background-color: #e2e2e2;
+	
+}
 section {
-	width: 700px;
+	width: 32%;
 	margin: auto;
-	border: 1px solid black;
+	background-color: #ffffff;
+	box-shadow: 0px 0px 3px 0px rgba(102, 102, 102, 0.49);
+	margin-top: 86px;	
 }
 
 header {
 	text-align: center;
+	border-bottom: 1px solid #e2e2e2;
+}
+
+header>h1 {
+  font-size: 18px;
+  line-height: 1.2;	
+}
+header>h2 {
+  font-size: 12px;
+  line-height: 1.2;	
 }
 
 .form-input {
-	padding: 10px;
+	padding: 7px;
 	margin-bottom: 15px; 
+	width: 100%;
+	height: 26px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: rgb(204, 204, 204);
+	box-shadow: 1px 1.732px 2px 0px rgba(255, 255, 255, 0.004);	
+	
 }
 .login-reg {
-	margin-left: 40px;
-	display: inline-block;
-	width: 60%;
-	border: 1px solid red;
+	margin-left: 4%;
+	/*display: inline-block;*/
+	width: 33%;
+	float: left;
 }
 
 .social {
-	display: inline-block;	
-	vertical-align: top;	
+	/*display: inline-block;	*/
+	/*vertical-align: top;	*/
+	float: right;
+	width: 26.5%;	
 }
 
 .social>ul {
 }
 .social>ul>li {
-	list-style: none;
+	list-style: none;	
+  background-image: -moz-linear-gradient( 90deg, rgb(0,0,0) 0%, rgb(255,255,255) 100%);
+  background-image: -webkit-linear-gradient( 90deg, rgb(0,0,0) 0%, rgb(255,255,255) 100%);
+  background-image: -ms-linear-gradient( 90deg, rgb(0,0,0) 0%, rgb(255,255,255) 100%);
+  box-shadow: inset 0.5px 0.866px 0px 0px rgba(255, 255, 255, 0.68);
+  width: 26.5%;
+  height: 26px;
+}
+
+.social>ul>li:first-child {
+	
+}
+.social>ul>li:last-child {
+	
 }
 
 .social>ul>li:first-child:after {
@@ -42,6 +81,399 @@ header {
     margin-left: -23px;
     margin-bottom: 17px;
 }
+
+/* copied css
+.Login {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 1980px;
+  height: 1700px;
+  z-index: 101;
+}
+.Headline {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 1980px;
+  height: 1700px;
+  z-index: 99;
+}
+.Shape_23 {
+  background-color: rgb(238, 238, 238);
+  position: absolute;
+  left: 679px;
+  top: 152px;
+  width: 622px;
+  height: 1px;
+  z-index: 98;
+}
+.State_thy_name_and_ye_shall_pass {
+  font-size: 18px;
+  font-family: "Arial";
+  color: rgb(42, 42, 42);
+  line-height: 1.2;
+  text-align: center;
+  position: absolute;
+  left: 701.579px;
+  top: 101.819px;
+  width: 264px;
+  height: 17px;
+  z-index: 97;
+}
+.Not_a_member_yet__Register_now_—_it_s_fun_and_e {
+  font-size: 12px;
+  font-family: "Arial";
+  color: rgb(42, 42, 42);
+  line-height: 1.2;
+  text-align: center;
+  position: absolute;
+  left: 700.876px;
+  top: 124.874px;
+  width: 283px;
+  height: 11px;
+  z-index: 96;
+}
+.Social_Login {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 1980px;
+  height: 1700px;
+  z-index: 94;
+}
+.Twitter_Button {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 1980px;
+  height: 1700px;
+  z-index: 93;
+}
+.Twitter_shape_copy {
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0.5px 0.866px 0px 0px rgba(0, 0, 0, 0.7);
+  position: absolute;
+  left: 1109px;
+  top: 260px;
+  width: 18px;
+  height: 13px;
+  z-index: 92;
+}
+.Login_with_Twitter {
+  font-size: 11px;
+  font-family: "Arial";
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  line-height: 3.706;
+  text-align: left;
+  text-shadow: 0.5px 0.866px 0px rgba(0, 0, 0, 0.7);
+  position: absolute;
+  left: 1136px;
+  top: 286.45px;
+  z-index: 91;
+}
+._ {
+  background-image: -moz-linear-gradient( 90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.99) 50%, rgb(0,0,0) 50%, rgba(0,0,0,0) 100%);
+  background-image: -webkit-linear-gradient( 90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.99) 50%, rgb(0,0,0) 50%, rgba(0,0,0,0) 100%);
+  background-image: -ms-linear-gradient( 90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.99) 50%, rgb(0,0,0) 50%, rgba(0,0,0,0) 100%);
+  position: absolute;
+  left: 1129px;
+  top: 255px;
+  width: 1px;
+  height: 25px;
+  z-index: 90;
+}
+._ {
+  background-image: -moz-linear-gradient( 90deg, rgba(255,255,255,0) 0%, rgb(255,255,255) 50%, rgba(255,255,255,0) 100%);
+  background-image: -webkit-linear-gradient( 90deg, rgba(255,255,255,0) 0%, rgb(255,255,255) 50%, rgba(255,255,255,0) 100%);
+  background-image: -ms-linear-gradient( 90deg, rgba(255,255,255,0) 0%, rgb(255,255,255) 50%, rgba(255,255,255,0) 100%);
+  position: absolute;
+  left: 1130px;
+  top: 255px;
+  width: 1px;
+  height: 25px;
+  z-index: 89;
+}
+.Button {
+  background-image: -moz-linear-gradient( 90deg, rgb(0,0,0) 0%, rgb(255,255,255) 100%);
+  background-image: -webkit-linear-gradient( 90deg, rgb(0,0,0) 0%, rgb(255,255,255) 100%);
+  background-image: -ms-linear-gradient( 90deg, rgb(0,0,0) 0%, rgb(255,255,255) 100%);
+  box-shadow: inset 0.5px 0.866px 0px 0px rgba(255, 255, 255, 0.68);
+  position: absolute;
+  left: 1102px;
+  top: 253px;
+  width: 165px;
+  height: 26px;
+  z-index: 88;
+}
+.Facebook_button {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 1980px;
+  height: 1700px;
+  z-index: 86;
+}
+.Faceboo_shape {
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0.5px 0.866px 0px 0px rgba(0, 0, 0, 0.7);
+  position: absolute;
+  left: 1113px;
+  top: 210px;
+  width: 9px;
+  height: 19px;
+  z-index: 85;
+}
+.Login_with_Facebook {
+  font-size: 11px;
+  font-family: "Arial";
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  line-height: 3.706;
+  text-align: left;
+  text-shadow: 0.5px 0.866px 0px rgba(0, 0, 0, 0.7);
+  position: absolute;
+  left: 1136px;
+  top: 239.45px;
+  z-index: 84;
+}
+._ {
+  background-image: -moz-linear-gradient( 90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.99) 50%, rgb(0,0,0) 50%, rgba(0,0,0,0) 100%);
+  background-image: -webkit-linear-gradient( 90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.99) 50%, rgb(0,0,0) 50%, rgba(0,0,0,0) 100%);
+  background-image: -ms-linear-gradient( 90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.99) 50%, rgb(0,0,0) 50%, rgba(0,0,0,0) 100%);
+  position: absolute;
+  left: 1129px;
+  top: 208px;
+  width: 1px;
+  height: 25px;
+  z-index: 83;
+}
+._ {
+  background-image: -moz-linear-gradient( 90deg, rgba(255,255,255,0) 0%, rgb(255,255,255) 50%, rgba(255,255,255,0) 100%);
+  background-image: -webkit-linear-gradient( 90deg, rgba(255,255,255,0) 0%, rgb(255,255,255) 50%, rgba(255,255,255,0) 100%);
+  background-image: -ms-linear-gradient( 90deg, rgba(255,255,255,0) 0%, rgb(255,255,255) 50%, rgba(255,255,255,0) 100%);
+  position: absolute;
+  left: 1130px;
+  top: 208px;
+  width: 1px;
+  height: 25px;
+  z-index: 82;
+}
+.Button {
+  background-image: -moz-linear-gradient( 90deg, rgb(0,0,0) 0%, rgb(255,255,255) 100%);
+  background-image: -webkit-linear-gradient( 90deg, rgb(0,0,0) 0%, rgb(255,255,255) 100%);
+  background-image: -ms-linear-gradient( 90deg, rgb(0,0,0) 0%, rgb(255,255,255) 100%);
+  box-shadow: inset 0.5px 0.866px 0px 0px rgba(255, 255, 255, 0.68);
+  position: absolute;
+  left: 1102px;
+  top: 206px;
+  width: 165px;
+  height: 26px;
+  z-index: 81;
+}
+.Or {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 1980px;
+  height: 1700px;
+  z-index: 78;
+}
+.or {
+  font-size: 18px;
+  font-family: "Arial";
+  color: rgb(42, 42, 42);
+  line-height: 1.2;
+  text-align: left;
+  position: absolute;
+  left: 1050px;
+  top: 230.2px;
+  z-index: 77;
+}
+.Shape_22 {
+  background-color: rgb(255, 255, 255);
+  position: absolute;
+  left: 1042px;
+  top: 227px;
+  width: 40px;
+  height: 34px;
+  z-index: 76;
+}
+.Ver_Line {
+  background-color: rgb(234, 234, 234);
+  position: absolute;
+  left: 1058px;
+  top: 188px;
+  width: 1px;
+  height: 120px;
+  z-index: 75;
+}
+.Form_Login {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 1980px;
+  height: 1700px;
+  z-index: 73;
+}
+.Default {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 1980px;
+  height: 1700px;
+  z-index: 26;
+}
+.Forgot_password_ {
+  font-size: 10px;
+  font-family: "Arial";
+  color: rgb(83, 181, 231);
+  font-style: italic;
+  line-height: 1.2;
+  text-align: left;
+  position: absolute;
+  left: 820px;
+  top: 240.421px;
+  z-index: 25;
+}
+.But_Login_Disabled {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 1980px;
+  height: 1700px;
+  z-index: 24;
+}
+.Login {
+  font-size: 12px;
+  font-family: "Arial";
+  color: rgb(255, 255, 255);
+  line-height: 1.2;
+  text-align: left;
+  text-shadow: 0.5px 0.866px 1px rgba(0, 0, 0, 0.38);
+  position: absolute;
+  left: 857px;
+  top: 288.502px;
+  z-index: 23;
+}
+.Shape_19 {
+  background-image: -moz-linear-gradient( 90deg, rgba(255,255,255,0) 0%, rgb(255,255,255) 100%);
+  background-image: -webkit-linear-gradient( 90deg, rgba(255,255,255,0) 0%, rgb(255,255,255) 100%);
+  background-image: -ms-linear-gradient( 90deg, rgba(255,255,255,0) 0%, rgb(255,255,255) 100%);
+  position: absolute;
+  left: 839px;
+  top: 282px;
+  width: 68px;
+  height: 26px;
+  z-index: 22;
+}
+.Remember {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 1980px;
+  height: 1700px;
+  z-index: 20;
+}
+.Layer_1 {
+  background-image: url("Layer 1.png");
+  position: absolute;
+  left: 701px;
+  top: 288px;
+  width: 16px;
+  height: 16px;
+  z-index: 19;
+}
+.Remember_me {
+  font-size: 12px;
+  font-family: "Arial";
+  color: rgb(102, 102, 102);
+  line-height: 1.2;
+  text-align: left;
+  position: absolute;
+  left: 725px;
+  top: 288.3px;
+  z-index: 18;
+}
+.PW {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 1980px;
+  height: 1700px;
+  z-index: 16;
+}
+.Password_ {
+  font-size: 12px;
+  font-family: "Arial";
+  color: rgb(204, 204, 204);
+  line-height: 1.2;
+  text-align: left;
+  position: absolute;
+  left: 709px;
+  top: 238.3px;
+  z-index: 15;
+}
+.Shape_20_copy {
+  border-style: solid;
+  border-width: 1px;
+  border-color: rgb(204, 204, 204);
+  background-color: rgb(255, 255, 255);
+  box-shadow: 1px 1.732px 2px 0px rgba(255, 255, 255, 0.004);
+  position: absolute;
+  left: 702px;
+  top: 232px;
+  width: 204px;
+  height: 26px;
+  z-index: 14;
+}
+.User {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 1980px;
+  height: 1700px;
+  z-index: 12;
+}
+.Username {
+  font-size: 12px;
+  font-family: "Arial";
+  color: rgb(204, 204, 204);
+  line-height: 1.2;
+  text-align: left;
+  position: absolute;
+  left: 709px;
+  top: 195.3px;
+  z-index: 11;
+}
+.Shape_20 {
+  border-style: solid;
+  border-width: 1px;
+  border-color: rgb(204, 204, 204);
+  background-color: rgb(255, 255, 255);
+  box-shadow: 1px 1.732px 2px 0px rgba(255, 255, 255, 0.004);
+  position: absolute;
+  left: 702px;
+  top: 189px;
+  width: 204px;
+  height: 26px;
+  z-index: 10;
+}
+.wrap {
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0px 0px 3px 0px rgba(102, 102, 102, 0.49);
+  position: absolute;
+  left: 680px;
+  top: 86px;
+  width: 620px;
+  height: 267px;
+  z-index: 6;
+}
+
+
+*/
+
 
 
 
