--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ section {
 	background-color: #ffffff;
 	box-shadow: 0px 0px 3px 0px rgba(102, 102, 102, 0.49);
 	margin-top: 86px;	
+	overflow: auto;
 }
 
 header {
@@ -56,22 +57,32 @@ header>h2 {
 }
 
 .social>ul {
+	padding: 0;
 }
 .social>ul>li {
 	list-style: none;	
+}
+.social>ul>li>a {
   background-image: -moz-linear-gradient( 90deg, rgb(0,0,0) 0%, rgb(255,255,255) 100%);
   background-image: -webkit-linear-gradient( 90deg, rgb(0,0,0) 0%, rgb(255,255,255) 100%);
   background-image: -ms-linear-gradient( 90deg, rgb(0,0,0) 0%, rgb(255,255,255) 100%);
   box-shadow: inset 0.5px 0.866px 0px 0px rgba(255, 255, 255, 0.68);
-  width: 26.5%;
   height: 26px;
-}
-
-.social>ul>li:first-child {
+	
+  font-size: 11px;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  line-height: 3.706;
+  text-align: left;
+  text-shadow: 0.5px 0.866px 0px rgba(0, 0, 0, 0.7);
+	border-radius: 30%;
 	
 }
-.social>ul>li:last-child {
-	
+.social>ul>li:first-child>a {
+	background-color: #80c5f9;
+}
+.social>ul>li:last-child>a {
+	background-color: 	#80c5f9;	
 }
 
 .social>ul>li:first-child:after {
